--- a/en/Types.ipynb
+++ b/en/Types.ipynb
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -189,8 +189,55 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The way one can disaggregate the different cases of an input that is a discriminated union is through _pattern matching_, represented by the construct `match ... with` and then, all the cases. The syntax is pretty straightforward: for each discriminated union case label (after the `|` sign in the construct) the function returns the price as an `int`. \n",
+    "\n",
+    "Note also that the match should contain _all_ the possible cases of the discriminated union. If one is forgetting some case, the compiler will tell us about with some wiggled underlining at the match. However, there is a special syntax to represent _the rest of the cases_, replacing them by the `_` (single underscore) symbol. For example,"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "fsharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.fsharp"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "let priceCheap electronic = \n",
+    "    match electronic with \n",
+    "    | Phones -> 435\n",
+    "    | _ -> 29"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "which means that the Phone value is 435, while _all the other posible cases_ are at 29 price point. \n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Combining discriminated unions and basic types\n",
+    "\n",
+    "In many cases, the discriminated union construct is not general enough, so one can combine it with basic types. Let us say that we want to identify "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -252,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -292,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -320,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -357,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
