Working with Discriminated unions

--- a/en/Types.ipynb
+++ b/en/Types.ipynb
@@ -45,7 +45,7 @@
     "- Expiration date\n",
     "- CVV number \n",
     "\n",
-    "A _type_ is the tool the computer languages provide to group or aggregate the properties of the model of any entity of our domain. As we all know, computers only understand only 0s and 1s bits at the lowest level, however, they are presented typically as chunks _bytes_ of 8 bits each. Putting bytes together one can have the basic types of all languages, such as integer and float numbers in all of their variations (signed or unsigned integers, integers of different size, float numbers of different sizes). Other basic types, such as strings or chars, even booleans, depend on the way each language implements them. \n",
+    "A _type_ is the tool the computer languages provides to group or aggregate the properties of the model of any entity of our domain. As we all know, computers only understand only 0s and 1s bits at the lowest level, however, they are presented typically as chunks _bytes_ of 8 bits each. Putting bytes together one can have the basic types of all languages, such as integer and float numbers in all of their variations (signed or unsigned integers, integers of different size, float numbers of different sizes). Other basic types, such as strings or chars, even booleans, depend on the way each language implements them. \n",
     "\n",
     "All contemporary languages can build compound types using these basic types. For example, if we need to model a wallet, we will need a way to represent money bills, credit cards, personal id, etc. Each of these elements in turn needs also to be modeled, and so on. Therefore, the wallet will be represented as a hierarchical aggregation of simpler models that, at the very bottom of it, will resort to basic types. \n",
     "\n",
@@ -61,15 +61,13 @@
     "- phone\n",
     "- speakers\n",
     "- headphones\n",
-    "- etc. \n",
+    "etc. \n",
     "\n",
     "The bullet list can be long, but probably one can write it down in a page (or, maybe it is provided by your vending machine client). \n",
     "\n",
-    "It looks like one can classify the characteristics of inputs and outputs more broadly. On one hand, the cardholder's name of a credit card and expiration dates are huge (even infinite) collections that can not be determined _a priori_. On the other hand, we have some features that belong to a well predefined collection (car colors, types of products). \n",
+    "It looks like one can classify the characteristics of inputs and outputs more broadly. On one hand, the cardholder's name of a credit card and expiration dates are huge collections that can not be determined _a priori_. On the other hand, we have some features that belong to a well predefined collection (car colors, types of products). Notice also that these two kind of types can be compound together in inputs or outputs, like in the wallet model. \n",
     "\n",
-    "Notice also that these two kind of types can be compound together in inputs or outputs, according to the bullet lists we wrote down. \n",
-    "\n",
-    "One of the greatest features of F\\# is to provide precise ways to implement these two kind of types. In the next sections we will see how to build these inputs and outputs in F\\#.\n",
+    "One of the greatest features of F\\# is that provides precise ways to implement these two kind of types. In the next sections we will see how to build these inputs and outputs in F\\#.\n",
     "\n",
     "By the way, the keyword that F\\# uses to build complex types is, of course, `type` ;-D. \n"
    ]
@@ -155,6 +153,7 @@
    },
    "outputs": [],
    "source": [
+    "let d = FoodProduct.Chips\n",
     "let s = Electronics.Speakers"
    ]
   },
@@ -163,81 +162,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`s` represents of course an speaker, and since it is inmutable, there is no possible way that can be a phone or a headphone. \n",
+    "The languages uses the dot `.` to represent a case of a discriminated union. The value `s` represents of course an speaker, and since it is inmutable, there is no possible way that can be a phone or a headphone. \n",
     "\n",
     "So how can we define functions with discriminated unions? Let us write a function `price` that receives an input of type `Electronics` and gives us the price:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "fsharp"
-    },
-    "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "let price electronic = \n",
-    "    match electronic with \n",
-    "    | Phones -> 435\n",
-    "    | Speakers -> 29\n",
-    "    | Headphones -> 122"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The way one can disaggregate the different cases of an input that is a discriminated union is through _pattern matching_, represented by the construct `match ... with` and then, all the cases. The syntax is pretty straightforward: for each discriminated union case label (after the `|` sign in the construct) the function returns the price as an `int`. \n",
-    "\n",
-    "Note also that the match should contain _all_ the possible cases of the discriminated union. If one is forgetting some case, the compiler will tell us about with some wiggled underlining at the match. However, there is a special syntax to represent _the rest of the cases_, replacing them by the `_` (single underscore) symbol. For example,"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "fsharp"
-    },
-    "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "let priceCheap electronic = \n",
-    "    match electronic with \n",
-    "    | Phones -> 435\n",
-    "    | _ -> 29"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "which means that the Phone value is 435, while _all the other posible cases_ are at 29 price point. \n"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Combining discriminated unions and basic types\n",
-    "\n",
-    "In many cases, the discriminated union construct is not general enough, so one can combine it with basic types. Let us say that we want to identify "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -251,13 +183,319 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "price: 29\n"
+      "The price of speaker is: 29 $\n"
      ]
     }
    ],
    "source": [
-    "let p = price s\n",
-    "printfn \"price: %A\" (price s)"
+    "let price electronic = \n",
+    "    match electronic with \n",
+    "    | Phones -> 435\n",
+    "    | Speakers -> 29\n",
+    "    | Headphones -> 122\n",
+    "\n",
+    "printfn \"The price of speaker is: %A $\" (price s)    "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The way one can disaggregate the different cases of an input that is a discriminated union is through _pattern matching_, represented by the construct `match ... with` and then, all the cases. The syntax is pretty straightforward: for each discriminated union case label (after the `|` sign in the construct) the function returns the price as an `int`. \n",
+    "\n",
+    "Note also that the match should contain _all_ the possible cases of the discriminated union. If one is forgetting some case, the compiler will tell us about with some wiggled underlining at the match. This means that the patter matching is _exhaustive_. \n",
+    "\n",
+    "Another very important aspect of the pattern matching is that is evaluated _in the order_ is written. \n",
+    "\n",
+    "But, what if we want to write down a `priceFood` function, and asign a 1.5 price to all the items except Chocolates, that are tagged at a 2.35 price? The language introduces the _wildcard_ symbol that matches _any_ input in the pattern matching construct. The wildcard is represented by the `_` (single underscore) symbol:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "fsharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.fsharp"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Chocolate: 2.35 $\n",
+      "Chips: 1.5 $\n",
+      "Candy: 1.5 $\n"
+     ]
+    }
+   ],
+   "source": [
+    "let priceFood food = \n",
+    "    match food with \n",
+    "    | Chocolate -> 2.35\n",
+    "    | _ -> 1.5 \n",
+    "\n",
+    "printfn \"Chocolate: %A $\" (priceFood FoodProduct.Chocolate)        \n",
+    "printfn \"Chips: %A $\" (priceFood FoodProduct.Chips)        \n",
+    "printfn \"Candy: %A $\" (priceFood FoodProduct.Candy)        "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we see the interplay between the order evaluation of the pattern matching and the wildcard. We are returning a specific values for _some cases_ (Chocolate), and asign a common value for _the rest of the cases_. When a food `value` is received by `priceFood` it is compared with the `Chocolate` case first. If it is not chocolate, then is get captured by the wildcard pattern. Consider the following example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "fsharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.fsharp"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Chocolate: 1.5 $\n",
+      "Chips: 1.5 $\n",
+      "Candy: 1.5 $\n"
+     ]
+    }
+   ],
+   "source": [
+    "let priceSale food = \n",
+    "    match food with \n",
+    "    | _ -> 1.5 \n",
+    "    | Chocolate -> 2.35\n",
+    "\n",
+    "printfn \"Chocolate: %A $\" (priceSale FoodProduct.Chocolate)        \n",
+    "printfn \"Chips: %A $\" (priceSale FoodProduct.Chips)        \n",
+    "printfn \"Candy: %A $\" (priceSale FoodProduct.Candy)        "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Well, everything is \"on sale\" at 1.5! That is because the wildcard captures _any input_ and since it is the first _case_, any food will be at that price. \n",
+    "\n",
+    "Here again, the compiler behind scenes comes to our rescue. It will let you know that some of the pattern matching rules will not be reached:\n",
+    "\n",
+    "![This will save you from bankruptcy](../figures/rule_will_never_match.png)\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Combining discriminated unions and basic types\n",
+    "\n",
+    "In many cases, the discriminated union construct is not general enough, so one can combine it with basic types. Let us say that we want to identify the brand of each of our items in the vending machines. Since it can accomodate multiple brands of products, we decide that we represent the brand by a `string`. We can expand our `FoodProduct` discriminated union type as:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "fsharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.fsharp"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "type BrandedFood =\n",
+    "    | Chips of string \n",
+    "    | Chocolate of string \n",
+    "    | Candy of string "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Each of the cases of the `BrandedFood` type has now a _value_ of type `string`. The discriminated union makes use of the keyword `of` to associate each case with each value type. One can define identifiers for this compound type as:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "fsharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.fsharp"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "let belovedChocolate = BrandedFood.Chocolate \"Wonka\"\n",
+    "let healthyChips = BrandedFood.Chips \"NotALays\"\n",
+    "let sourCandy = BrandedFood.Candy \"TearDrops\""
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the brand example, we choose to combine all the cases with the same basic type, `string`. But, again, one can mix and match. For example, a chocolate can come in different presentations:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "fsharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.fsharp"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "type ChocolatePresentation =\n",
+    "| Bar of float  // a chocolate Bar of a given weight\n",
+    "| Box of int // a package with a number of chocolate pieces    "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Or, if we want to model the change money the vending machine returns to the customer, we can define a case where an actual amount is returned, and another one that represents the fact that the client just put the exact money into the machine:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "fsharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.fsharp"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "type Change =\n",
+    "| Amount of float\n",
+    "| NoChange"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pattern matching in functions against these compound discriminated unions is again fairly simple. To get the brand of a `BrandedFood` product, we can define the function `brand`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "fsharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.fsharp"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "let brand product = \n",
+    "    match product with\n",
+    "    | Chips p -> p \n",
+    "    | Chocolate p -> p \n",
+    "    | Candy p -> p  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "fsharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.fsharp"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Brand of belovedChocolate: Wonka\n"
+     ]
+    }
+   ],
+   "source": [
+    "printfn \"Brand of belovedChocolate: %s\" (brand belovedChocolate)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this function, each case has an associated value represented by the identifier `p`, that is _unwrapped_ from the discriminated union, and returned. \n",
+    "\n",
+    "Another example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "fsharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.fsharp"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You are receiving 3.0 $ as change\n"
+     ]
+    }
+   ],
+   "source": [
+    "let changeValue change =\n",
+    "    match change with \n",
+    "    | Amount money -> money\n",
+    "    | NoChange -> 0 \n",
+    "\n",
+    "let c = Amount 3 \n",
+    "\n",
+    "\n",
+    "printfn \"You are receiving %A $ as change\" (changeValue c)"
    ]
   },
   {
