Resorted Types to present annotation of basic types first

--- a/en/Types.ipynb
+++ b/en/Types.ipynb
@@ -14,7 +14,7 @@
    "source": [
     "To completely define a function, you not only need to establish its behavior, but also the inputs and outputs. That is where _types_ come! \n",
     "\n",
-    "### Thinking with types\n",
+    "## Thinking with types\n",
     "\n",
     "We have covered the basics of functions in F\\#, and defined some properties that difference them from routines or procedures in other languages. We have also seen how one can combine functions together. That is the first aspect about defining functions: how they behave, and how one can encapsulate this behavior in one or several functions that can be composed to generate results. In our example, the behavior of our `vendingMachine` is to give you some product once you provided enough money and selected your treat with a keyboard. \n",
     "The second aspect that is _needed_ to define the function is what sort of inputs and outputs it has. Going back to our first example, one had a table that represented the function `carColor`, with the color of each car in parked in a block. A completely different function would be `carHorsePower`, where for each car in the block, you write down the horsepower. Clearly here the inputs of both functions are the same, the license plate, but the outputs are different. If our vending machine does not take paper bills but credit cards, the input will be different, but you still get your beloved chips, that is, the outputs of `vendingMachine` and the modern `vendingMachineWithCreditCard` are the same, but the inputs are different.\n",
@@ -70,6 +70,190 @@
     "One of the greatest features of F\\# is that provides precise ways to implement these two kind of types. In the next sections we will see how to build these inputs and outputs in F\\#.\n",
     "\n",
     "By the way, the keyword that F\\# uses to build complex types is, of course, `type` ;-D. \n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Annotating types and type inference\n",
+    "\n",
+    "We have lightly defined some values before: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "fsharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.fsharp"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "let a = 1.0 + 3.0 // floats \n",
+    "let s = \"this is a string\" \n",
+    "let l = [1 ; 2 ; 3] // A list of integers \n",
+    "let m = (\"Messi\",10) // A tuple of a string and a number \n",
+    "let t = true // A bool "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "which, except for the use of the `let` keyword, can look quite familiar for, for example, Python: one uses the name of the value, the equal sign and the expression that will be assigned to the value in the right hand side. There is no declaration of _which_ type the value is! But we already stated that the language uses static types, so how the language knows which type each value has? \n",
+    "\n",
+    "If you hover your mouse over each of the values above, you can see something like this:\n",
+    "\n",
+    "![Type inference](../figures/type_inference.png)\n",
+    "\n",
+    "That box contains the type of the value `a` that has been _inferred_ by the compiler. Yes, when you code in a F\\# supported IDE, there will be an F\\# compiler digesting your code as you write it, and exploring which types are you working with. In the vast majority of the cases, the compiler guess is correct. There are some cases where it cannot infer the type from your code's context. in that case, you will see some red wiggles underlining your variable, and a warning message:\n",
+    "\n",
+    "![Indeterminate lookup](../figures/indeterminate_lookup.png)\n",
+    "\n",
+    "that says exactly that: the compiler does not know which type needs to assign to the troubled value.\n",
+    "\n",
+    "So, in general, one does not explicitly define the types of the values, and that task is delegated to the compiler behind scenes. However, one can annotate the type as: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "fsharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.fsharp"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "let aa: float = 1.0 + 3.0 // floats \n",
+    "let ss: string = \"this is a string\" \n",
+    "let ll: int list = [1 ; 2 ; 3] // A list of integers \n",
+    "let mm: string * int = (\"Messi\",10) // A tuple of a string and a number \n",
+    "let tt: bool = true // A bool "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "One uses the `:<type>` annotation to define the types of each value. In the case of functions one also uses `:<type>` just after defining all the inputs:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "fsharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.fsharp"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "let sum a b : int = \n",
+    "    a + b "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If necessary, one can define the types of the input variables too:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "fsharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.fsharp"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "let sum2 (a:int) (b:int) : int = \n",
+    "    a + b "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The parenthesis are used to associate each input value with its type. One does not need to annotate all the inputs of a function, just those ones that confuse the compiler or your fellow developer, or just you in the future. "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "fsharp"
+    }
+   },
+   "source": [
+    "A closer look at the function above leads us to another property. Hovering over `sum` we see:\n",
+    "\n",
+    "![Inferred function types](../figures/function_types.png)\n",
+    "\n",
+    "The compiler says us that the function `sum` is of type \n",
+    "```fsharp\n",
+    "int -> int -> int \n",
+    "```\n",
+    "that is, it receives two `int`s as input and returns an `int` as output. We only needed to explicitly type the output of the function, and the compiler determined that both inputs are `int`s. That is because the sum operator `+` needs two values of the _same_ type, and there is no implicit promotion of types in the language:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "fsharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.fsharp"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "input.fsx (2,14)-(2,17) typecheck error The type 'float' does not match the type 'int'\ninput.fsx (2,12)-(2,13) typecheck error The type 'float' does not match the type 'int'",
+     "output_type": "error",
+     "traceback": [
+      "input.fsx (2,14)-(2,17) typecheck error The type 'float' does not match the type 'int'\n",
+      "\n",
+      "input.fsx (2,12)-(2,13) typecheck error The type 'float' does not match the type 'int'"
+     ]
+    }
+   ],
+   "source": [
+    "let si = 2 + 3 \n",
+    "let sf = 2 + 3.0 "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> 🔔 Looking at the signature  `int -> int -> int` of the function `sum` it does not seem clear which are the inputs and which are the outputs. From the definition of the function we know that it receives two inputs and returns another one, but the signature is completely oblivious to this, and uses the same `->` symbol between all the types. Could `sum` be a function that receives an `int` and returns `int -> int`, which is itself a function? The answer is yes, and is called _currying_. We will come back later to currying when we revisit functions."
    ]
   },
   {
@@ -135,7 +319,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> It is customary to use `PascalCase` for types.\n",
+    "> 🔔 It is customary to use `PascalCase` for types (i.e., `FoodProduct`).\n",
+    "\n",
+    "> ❗️ Case types in a discriminated union should start with an uppercase letter (`Phones`, `Chips`, etc.).\n",
     "\n",
     "In the expressions above we are defining a type with a name (`FoodProduct`, `Electronics`) that can have several  case types. It is important to stress the fact that the cases of each discriminated union type are _disjoint_, that is, can not be accessed at the same time. For example:"
    ]
@@ -494,9 +680,14 @@
     "\n",
     "let c = Amount 3 \n",
     "\n",
-    "\n",
     "printfn \"You are receiving %A $ as change\" (changeValue c)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -522,149 +713,6 @@
     "\n",
     "\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n",
-    "\n",
-    "#### Type inference\n",
-    "\n",
-    "We have lightly defined some values before: "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "fsharp"
-    },
-    "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "let a = 1.0 + 3.0 // floats \n",
-    "let s = \"this is a string\" \n",
-    "let l = [1 ; 2 ; 3] // A list of integers \n",
-    "let m = (\"Messi\",10) // A tuple of a string and a number \n",
-    "let t = true // A bool "
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "which, except for the use of the `let` keyword, can look quite familiar for, for example, Python: one uses the name of the value, the equal sign and the expression that will be assigned to the value in the right hand side. There is no declaration of _which_ type the value is! But we already stated that the language uses static types, so how the language knows which type each value has? \n",
-    "\n",
-    "If you hover your mouse over each of the values above, you can see something like this:\n",
-    "\n",
-    "![Type inference](../figures/type_inference.png)\n",
-    "\n",
-    "That box contains the type of the value `a` that has been _inferred_ by the compiler. Yes, when you code in a F\\# supported IDE, there will be an F\\# compiler digesting your code as you write it, and exploring which types are you working with. In the vast majority of the cases, the compiler guess is correct. There are some cases where it cannot infer the type from your code's context. in that case, you will see some red wiggles underlining your variable, and a warning message:\n",
-    "\n",
-    "![Indeterminate lookup](../figures/indeterminate_lookup.png)\n",
-    "\n",
-    "that says exactly that: the compiler does not know which type needs to assign to the troubled value.\n",
-    "\n",
-    "So, in general, one does not explicitly define the types of the values, and that task is delegated to the compiler behind scenes. However, one can define the type as: "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "fsharp"
-    },
-    "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "let (aa: float) = 1.0 + 3.0 // floats \n",
-    "let (ss: string) = \"this is a string\" \n",
-    "let (ll: int list) = [1 ; 2 ; 3] // A list of integers \n",
-    "let (mm: string * int) = (\"Messi\",10) // A tuple of a string and a number \n",
-    "let (tt: bool) = true // A bool "
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "In the case of functions one also uses `:<type>` just after defining all the inputs:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "fsharp"
-    },
-    "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "let sum a b : int = \n",
-    "    a + b "
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "fsharp"
-    }
-   },
-   "source": [
-    "A closer look at the function above leads us to another property. Hovering over `sum` we see:\n",
-    "\n",
-    "![Inferred function types](../figures/function_types.png)\n",
-    "\n",
-    "The compiler says us that the function is of type \n",
-    "```fsharp\n",
-    "int -> int -> int \n",
-    "```\n",
-    "that is, it receives two `int`s as input and returns an `int` as output. We only needed to explicitly type the output of the function, and the compiler determined that both inputs are `int`s. That is because the sum operator `+` needs two values of the _same_ type, and there is no implicit promotion of types in the language:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "fsharp"
-    },
-    "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
-    }
-   },
-   "outputs": [
-    {
-     "ename": "Error",
-     "evalue": "input.fsx (2,14)-(2,17) typecheck error The type 'float' does not match the type 'int'\ninput.fsx (2,12)-(2,13) typecheck error The type 'float' does not match the type 'int'",
-     "output_type": "error",
-     "traceback": [
-      "input.fsx (2,14)-(2,17) typecheck error The type 'float' does not match the type 'int'\n",
-      "input.fsx (2,12)-(2,13) typecheck error The type 'float' does not match the type 'int'"
-     ]
-    }
-   ],
-   "source": [
-    "let si = 2 + 3 \n",
-    "let sf = 2 + 3.0 "
    ]
   },
   {
