Almost finished with DUs

--- a/en/Types.ipynb
+++ b/en/Types.ipynb
@@ -261,7 +261,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Discriminated unions\n",
+    "### The `unit` type"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Discriminated unions\n",
     "\n",
     "One of the key aspects of F\\# (and other functional languages) is that it provides a specific syntax to model those characteristics of inputs and outputs that belong to a well predefined collection. These are called _discriminated unions_. \n",
     "\n",
@@ -488,7 +496,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Combining discriminated unions and basic types\n",
+    "### Combining discriminated unions and basic types\n",
     "\n",
     "In many cases, the discriminated union construct is not general enough, so one can combine it with basic types. Let us say that we want to identify the brand of each of our items in the vending machines. Since it can accomodate multiple brands of products, we decide that we represent the brand by a `string`. We can expand our `FoodProduct` discriminated union type as:\n"
    ]
@@ -687,7 +695,17 @@
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "> Note on how a discriminated union that mix types presents a kind of divergence in code. This is refered to inputs and outputs: if a function receives one of these du as an input, it needs to wrap the du type into another type, because it is not possible for a function to return the wrapped value of a du, since it can be different types. "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Protecting inputs with single discriminated unions"
+   ]
   },
   {
    "cell_type": "markdown",
